--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         
                       </a>
                       <div class="pic">
-                        <img src="assets/images/university-of-zimbabwe-logo-png_seeklogo-361755.png" alt="UZ logo" style="width:90px;height:90px;">
+                        <img src="Official Logo.jpg" alt="UZ logo" style="width:90px;height:90px;">
                       </div>
                       
                       <!-- ***** Menu End ***** -->
